--- a/07-political-violence-costarica/cómo-mueren-democracias/democracia-en-crisis-cr.html
+++ b/07-political-violence-costarica/cómo-mueren-democracias/democracia-en-crisis-cr.html
@@ -241,6 +241,69 @@
             margin: 5px 5px 5px 0;
         }
 
+        .stat-link {
+            color: white;
+            text-decoration: none;
+        }
+
+        .stat-link:hover {
+            text-decoration: underline;
+            opacity: 0.9;
+        }
+
+        /* PROCESS CARDS */
+        .process-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            gap: 20px;
+            margin-top: 40px;
+        }
+
+        .process-card {
+            display: flex;
+            gap: 16px;
+            background: linear-gradient(145deg, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.02));
+            border-radius: 12px;
+            padding: 20px;
+            border: 1px solid rgba(255, 255, 255, 0.08);
+            border-left: 6px solid var(--tone, var(--primary));
+            box-shadow: 0 10px 30px rgba(211, 47, 47, 0.15);
+            backdrop-filter: blur(10px);
+            transition: transform 0.25s ease, border-color 0.25s ease;
+        }
+
+        .process-card:hover {
+            transform: translateY(-4px);
+            border-color: rgba(255, 255, 255, 0.18);
+        }
+
+        .process-thumb {
+            width: 52px;
+            height: 52px;
+            border-radius: 8px;
+            border: 2px dashed rgba(255, 255, 255, 0.35);
+            background: rgba(255, 255, 255, 0.03);
+            flex-shrink: 0;
+        }
+
+        .process-body h3 {
+            font-size: 18px;
+            margin-bottom: 8px;
+        }
+
+        .process-body p {
+            font-size: 14px;
+            opacity: 0.9;
+            margin-bottom: 10px;
+        }
+
+        .process-meta {
+            font-size: 12px;
+            color: var(--accent);
+            opacity: 0.8;
+            font-weight: 600;
+        }
+
         /* FOUR PILLARS */
         .pillars-grid {
             display: grid;
@@ -582,7 +645,71 @@
         <div class="hero-content">
             <h1>⚠️ La Democracia en Crisis</h1>
             <p class="subtitle">Costa Rica 2022-2026: Cómo se erosiona la democracia desde adentro</p>
-            <button class="cta-button" onclick="scrollTo('timeline')">Descubre lo que pasó</button>
+            <button class="cta-button" onclick="scrollTo('procesos')">Descubre lo que pasó</button>
+        </div>
+    </section>
+
+    <!-- PROCESOS DE DESMANTELAMIENTO -->
+    <section class="section" id="procesos">
+        <h2 class="section-title">El desmantelamiento de la democracia</h2>
+        <p style="text-align: center; opacity: 0.9; max-width: 900px; margin: 0 auto 30px;">
+            El desmantelamiento de la democracia no siempre ocurre mediante golpes de estado violentos, sino a través de un proceso gradual de erosión institucional.
+        </p>
+
+        <div class="process-grid">
+            <div class="process-card fade-in" style="--tone: #f9a825;">
+                <div class="process-thumb"></div>
+                <div class="process-body">
+                    <h3>1. ⚖️ Uso de la ley como camuflaje</h3>
+                    <p>Legalismo autocrático: se invocan leyes y mayorías para concentrar poder y reprimir bajo apariencia de legalidad (Varol, Levitsky & Ziblatt).</p>
+                    <div class="process-meta">Varol (2015) · Levitsky & Ziblatt (2018)</div>
+                </div>
+            </div>
+
+            <div class="process-card fade-in" style="--tone: #f57c00;">
+                <div class="process-thumb"></div>
+                <div class="process-body">
+                    <h3>2. 🧪 Captura de los árbitros</h3>
+                    <p>Empaquetar o purgar cortes y entes de control, infiltrando leales para blindar al ejecutivo y castigar opositores (van Lit & van Ham).</p>
+                    <div class="process-meta">Esen (2025) · van Lit & van Ham (2025)</div>
+                </div>
+            </div>
+
+            <div class="process-card fade-in" style="--tone: #ef6c00;">
+                <div class="process-thumb"></div>
+                <div class="process-body">
+                    <h3>3. 🚫 Neutralización de la oposición y críticos</h3>
+                    <p>Lawfare: perseguir con delitos comunes, acusaciones cronometradas y campañas de delegitimación para silenciar disenso (Feierherd, Varol).</p>
+                    <div class="process-meta">Feierherd (2024) · Varol (2015)</div>
+                </div>
+            </div>
+
+            <div class="process-card fade-in" style="--tone: #e65100;">
+                <div class="process-thumb"></div>
+                <div class="process-body">
+                    <h3>4. 📰 Captura y asfixia de los medios</h3>
+                    <p>Asfixia económica y demandas por difamación para forzar autocensura y premiar a medios leales (Dragomir, Varol).</p>
+                    <div class="process-meta">Dragomir (2019) · Varol (2015)</div>
+                </div>
+            </div>
+
+            <div class="process-card fade-in" style="--tone: #d84315;">
+                <div class="process-thumb"></div>
+                <div class="process-body">
+                    <h3>5. 🗳️ Reescritura de las reglas de juego</h3>
+                    <p>Cambios legales y endógenos para inclinar el campo electoral, duplicar instituciones leales y vaciar contrapesos.</p>
+                    <div class="process-meta">Varol (2015) · Garcia-Holgado (2025)</div>
+                </div>
+            </div>
+
+            <div class="process-card fade-in" style="--tone: #c62828;">
+                <div class="process-thumb"></div>
+                <div class="process-body">
+                    <h3>6. 🔥 Deslegitimación de la verdad y polarización</h3>
+                    <p>Retórica anti-élite, ataque a evidencia y siembra de posverdad para dividir al país y justificar medidas autoritarias.</p>
+                    <div class="process-meta">Esen (2025) · Hameleers (2022)</div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -593,10 +720,10 @@
             <div class="timeline-item">
                 <div class="timeline-date">2022-2023</div>
                 <div class="timeline-content">
-                    <h3>⚖️ Primeros Ataques al Poder Judicial</h3>
+                    <h3>⚖️ Ataques al Poder Judicial ("A mi nadie me controla")</h3>
                     <p>El Presidente Chaves comienza a atacar públicamente a magistrados y jueces, llamándolos "élite" que capturó el sistema.</p>
-                    <span class="stat">Marcha contra la Fiscalía Documentada</span>
-                    <span class="stat">Declaraciones Públicas Violentas</span>
+                    <a class="stat stat-link" href="https://www.barrons.com/news/spanish/presidente-de-costa-rica-encabeza-marcha-contra-fiscal-que-lo-investiga-7005ea38" target="_blank" rel="noopener">Marcha contra la fiscalía documentada por medios internacionales</a>
+                    <span class="stat">Declaraciones públicas violentas</span>
                 </div>
                 <div class="timeline-marker"></div>
             </div>
@@ -604,8 +731,8 @@
             <div class="timeline-item">
                 <div class="timeline-date">2024-2025</div>
                 <div class="timeline-content">
-                    <h3>💰 Asfixia Presupuestaria</h3>
-                    <p>El Ministerio de Hacienda bloquea ₡8.687,88 millones aprobados por la Asamblea Legislativa para el OIJ y Ministerio Público.</p>
+                    <h3>💰 Anticorrupción como forma de persecución política de quienes piensen diferente</h3>
+                    <p>El Ministerio de Hacienda bloquea ₡8.687,88 millones aprobados por la Asamblea Legislativa para el OIJ y Ministerio Público, usando el discurso anticorrupción para debilitar a quienes fiscalizan.</p>
                     <span class="stat">₡8.687 millones bloqueados</span>
                     <span class="stat">Impacto "demoledor" documentado</span>
                 </div>
